--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <a href="https://www.tolaayomikun9@gmail.com"><img src="https://i.pinimg.com/236x/eb/d2/cf/ebd2cfe087880001e337fdcdd137ed1a.jpg" /></a> 
                 </div> 
             </div> 
-            <p>Copyright © 2022 Ayomikun. All rights reserved</p> 
+            <p style="text-align= center">Copyright © 2022 Ayomikun. All rights reserved</p> 
         </div> 
     </section> 
     <!-- End Footer --> 
