--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <h1 class="section-title">About <span>me</span></h1> 
                     <h2>Full Stack Web Developer & Graphic Designer</h2> 
                     <p>I am a full stack web developer that can provide clean code and perfect design. I also make the website interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device. I also design logos and business cards for big companies.</p> 
-                    <a href="#" class="cta">Download Resume</a> 
+                    <a href="resume1.png" download class="cta">Download Resume</a> 
                 </div> 
             </div> 
     </section> 
