--- a/index.html
+++ b/index.html
@@ -153,12 +153,56 @@
                     <h1 class="section-title">About <span>me</span></h1> 
                     <h2>Full Stack Web Developer & Graphic Designer</h2> 
                     <p>I am a full stack web developer that can provide clean code and perfect design. I also make the website interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device. I also design logos and business cards for big companies.</p> 
-                    <a href="resume1.png" download class="cta">Download Resume</a> 
+                    <a href="images/resume1.png" download class="cta">Download Resume</a> 
                 </div> 
             </div> 
     </section> 
     <!-- End About Section --> 
     <!-- Contact Section --> 
+
+    <section class="testimonial">
+        <h1>Hear from <span>My Clients </span></h1>
+    <div class="row">
+        <div class="testimonial-col">
+            <p>Thank you very much for your service, i'm really grateful. It was just like a magic when I got a notification that my website has been published and hosted + it is responsive on all devices and now i'm making more money from it.</p>
+            <img src="images/randomphoto2.jpeg">
+            <h3>Kehinde Adebare</h3>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+        </div>
+        <div class="testimonial-col">
+            <p>It's true if you're hearing that a website is said to be the face of a brand or a business organization. Since December 2021 that I got my first app store my business has ranked to the next level. A very big thank you to Mayors Graphics. </p>
+            <img src="images/randomphoto3.jpeg">
+            <h3>Mustapha Solomon</h3>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+            </div>
+        </div>
+        <div class="testimonial-col">
+            <p>Flyers was the best thing I got from you. I love all those animations and the effects in the video. If your're seeing this comment, don't hesitate to send a message to Mayors Graphics and get your work done. Do not hesitate to message him.</p>
+            <img src="images/randomphoto4.jpeg">
+            <h3>Akinsanya Rebecca</h3>
+            <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+            </div>
+        </div>
+    </div>
+    </section>
+
+
     <section id="contact"> 
         <div class="contact container"> 
             <div> 
@@ -219,7 +263,7 @@
                     <a href="https://www.tolaayomikun9@gmail.com"><img src="https://i.pinimg.com/236x/eb/d2/cf/ebd2cfe087880001e337fdcdd137ed1a.jpg" /></a> 
                 </div> 
             </div> 
-            <p style="text-align= center">Copyright © 2022 Ayomikun. All rights reserved</p> 
+            <p>Copyright © 2022, Mayors Graphics. All rights reserved <br> Tested and Trusted ✔</p> 
         </div> 
     </section> 
     <!-- End Footer --> 
