--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tola Ayomikun">
     <meta name="keywords" content="Tola Ayomikun Mogbatoluwa, Portfolio Website Design, Mayors Graphics, Graphic Designer in Nigeria, Best of all in Nigeria">
+    <meta name="description" content="Web Development, Logo Design, 2D & 3D Animation, Flyer Design, Banner Design, Birthday Card Design and lot more...">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.png.png">
     <title>Tola Ayomikun | Portfolio Website</title>
@@ -25,8 +26,8 @@
         <ul> 
             <li><a href="#hero" data-after="Home">Home</a></li> 
             <li><a href="#services" data-after="Service">Services</a></li> 
-            <li><a href="#projects" data-after="Projects">Projects</a></li> 
-            <li><a href="#about" data-after="About">About</a></li> 
+            <li><a href="#projects" data-after="Projects"> My Projects</a></li> 
+            <li><a href="#about" data-after="About">About Me</a></li> 
             <li><a href="#contact" data-after="Contact">Contact</a></li> 
         </ul> 
     </div> 
@@ -92,7 +93,7 @@
             <div class="project-item"> 
                 <div class="project-info"> 
                     <h1>Social Media Page Design</h1> 
-                    <h2>Instagram Design</h2> 
+                    <h2>Instagram & Facebook Design</h2> 
                     <p>I designed this flyer for a company and they posted it on Instagram and it was wowed by so many people that love the great design. If you also want an eye-catching design, Message me now.</p> 
                 </div> 
                 <div class="project-img"> 
@@ -103,10 +104,10 @@
                 <div class="project-info"> 
                     <h1>E-Commerce Website Design</h1> 
                     <h2>Graphics Store</h2> 
-                    <p>The company odered for a nice E-commerce website and it was delivered withn three weeks. They loved it because of so many fascinating features I added. The website is now ranked on Google because of the goof SEO tools I used.</p>
+                    <p>This company odered for a nice E-commerce website and it was delivered withn three weeks. They loved it because of so many fascinating features I added. The website is now ranked on Google because of the goof SEO tools I used.</p>
                 </div> 
                 <div class="project-img"> 
-                    <img src="images/cssbackground.jpeg"> 
+                    <img src="images/css.jpeg"> 
                 </div> 
             </div> 
             <div class="project-item"> 
