--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tola Ayomikun">
     <meta name="keywords" content="Tola Ayomikun Mogbatoluwa, Portfolio Website Design, Mayors Graphics, Graphic Designer in Nigeria, Best of all in Nigeria">
-    <meta name="description" content="Web Development, Logo Design, 2D & 3D Animation, Flyer Design, Banner Design, Birthday Card Design and lot more...">
+    <meta name="description" content="Tola Ayomikun is a Full Stack Web Developer & Graphic Designer. He has 4 years experience in this field...">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/logo.png.png">
+    <link rel="icon" href="images/Mayors Graphics © - Personal Logo.png">
     <title>Tola Ayomikun | Portfolio Website</title>
 </head> 
 <body> 
@@ -42,6 +42,9 @@
             <h1>Hello, <span></span></h1> 
             <h1>My Name is <span></span></h1> 
             <h1>Ayomikun <span></span></h1> 
+            <div class="container1">
+                <h2 style="color: white;">I am a <span class="auto-type"></span></h1>
+            </div>
             <a href="#projects" type="button" class="cta">Portfolio</a> 
         </div> 
     </div> 
@@ -59,114 +62,93 @@
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" />
                 </div> 
                 <h2>Graphic Design</h2>
-                <p>An eye-catching design can promote your brand to the next level. It can make you stand out on all social media platforms like Facebook, Instagram, Twitter and lot more. I can design flyers, logos, banners, book covers, business cards and lot more</p> 
+                <p>An eye-catching design can promote your brand to the next level. I design flyers, logos, book covers, business cards and lots more for companies and individuals at an affordable rate.</p> 
             </div> 
             <div class="service-item"> 
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" />
                 </div> 
                 <h2>Web Design</h2> 
-                <p>A responsive website is what your company needs today! Getting a website for yourself doesn't mean you're taking a risk because it will allow customers to reach out to your online store easily. It also reduces stress of displaying your items in an open store.</p> 
+                <p>A responsive website is what your company needs today! Getting a website for yourself doesn't mean you're taking a risk because it will allow customers to reach out to your online store easily.</p> 
             </div> 
             <div class="service-item"> 
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" />
                 </div> 
                 <h2>Advert Videos</h2> 
-                <p>The fastest way to gain human attention is using video. A video will make your client trust you and rely on you. A promotional video tells a client more about your brand and you don't go about typing messages all day. Get yours today!</p> 
+                <p>The fastest way to gain human attention is using video. A video will make your client trust you and rely on you. A promotional video tells a client more about your brand and you don't go about typing.</p> 
             </div> 
             <div class="service-item"> 
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" />
                 </div> 
                 <h2>App Development</h2> 
-                <p>This is one of the best ways to make your company rank one search engines. The more you're improving in introducing your company into technology, the more sales you get. You don't need to have a very big store before you can sell things. Get your own App today!</p> 
+                <p>This is one of the improvements in technology. If you purchase an app for your business, you'll have more chances to be known all over the globe and this can improve your business.</p> 
             </div> 
         </div> 
     </div> 
 </section> 
 <!-- End Service Section --> 
 <!-- Projects Section --> 
-<section id="projects"> 
-    <div class="projects container"> 
-        <div class="projects-header"> 
-            <h1 class="section-title">Recent <span>Projects</span></h1> 
-        </div> 
-        <div class="all-projects"> 
-            <div class="project-item"> 
-                <div class="project-info"> 
-                    <h1>Social Media Page Design</h1> 
-                    <h2>Instagram & Facebook Design</h2> 
-                    <p>I designed this flyer for a company and they posted it on Instagram and it was wowed by so many people that love the great design. If you also want an eye-catching design, Message me now.</p> 
-                </div> 
-                <div class="project-img"> 
-                    <img src="images/Social Media.png"> 
-                </div> 
-            </div> 
-            <div class="project-item"> 
-                <div class="project-info"> 
-                    <h1>E-Commerce Website Design</h1> 
-                    <h2>Graphics Store</h2> 
-                    <p>This company odered for a nice E-commerce website and it was delivered withn three weeks. They loved it because of so many fascinating features I added. The website is now ranked on Google because of the goof SEO tools I used.</p>
-                </div> 
-                <div class="project-img"> 
-                    <img src="images/css.jpeg"> 
-                </div> 
-            </div> 
-            <div class="project-item"> 
-                <div class="project-info"> 
-                    <h1>Logo Design</h1> 
-                    <h2>Eye-Catching logos</h2> 
-                    <p>Logos tell your client more about what you do in your company. I can design more than 10 logos in 2 weeks. I designed these logos recently for some brands and they loved them. If you also want me to design a logo for your brand also, don't hesitate to send me a message.</p> 
-                </div> 
-                <div class="project-img"> 
-                    <img src="images/logo.png.png"> 
-                </div> 
-            </div> 
-            <div class="project-item"> 
-                <div class="project-info"> 
-                    <h1>3D Mockup</h1> 
-                    <h2>Banner & Bag Mockup</h2> 
-                    <p>You can design a mockup and send a copy to your client even if the product is not yet ready. It helps you to look real and legit in the mind of your clients because it's just as if you're sending them the real product already.</p> 
-                </div> 
-                <div class="project-img"> 
-                    <img src="images/3dmockup.png"> 
-                </div> </div> <div class="project-item"> 
-                    <div class="project-info"> 
-                        <h1>Birthday Card Design</h1> 
-                        <h2>Birthday gift for loved ones</h2> 
-                        <p>If you're thinking of what to buy for your loved ones on their birthday and you don't have enough money, you don't have to panic because I am right here with you. Just send me a message with the picture of the celebrant and the name, That's all.</p> 
-                    </div> 
-                    <div class="project-img"> 
-                        <img src="images/Happy Birthday twins.png">
-                    </div> 
-                </div> 
-            </div> 
-        </div> 
-    </section> 
+<section id="projects">
+    <div class="project-container">
+        <h1>MY RECENT <span>PROJECTS</span></h1>
+        <div class="row">
+            <div class="col-3">
+                <img src="images/Flyer- Mayors Graphics.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Flyer- Mayors Graphics2.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Flyer-Mayors Graphics3.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Happy Birthday Flyer - Mayors Graphics.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Happy Sunday Flyer - Mayors Graphics.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Yetty White Cakes- Mayors Graphics.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Social Media Flyer - Mayors Graphics.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Web design flyer- Mayors Gaphics.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Social Media Post Flyer - Mayors Graphics.png">
+            </div>
+            <div class="col-3">
+                <img src="images/Bag Mockup - Mayors Graphics.jpg">
+            </div>
+        </div>
+    </div>
+</section>
     <!-- End Projects Section --> 
     <!-- About Section --> 
     <section id="about"> 
         <div class="about container"> 
             <div class="col-left"> 
                 <div class="about-img"> 
-                    <img src="images/ayomikunwithgoodbackground.png"> 
+                    <img src="images/Tola Ayomikun Mogbatoluwa-Mayors Graphics.png"> 
                 </div> 
             </div> 
             <div class="col-right"> 
                     <h1 class="section-title">About <span>me</span></h1> 
-                    <h2>Full Stack Web Developer & Graphic Designer</h2> 
-                    <p>I am a full stack web developer that can provide clean code and perfect design. I also make the website interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device. I also design logos and business cards for big companies.</p> 
-                    <a href="images/resume1.png" download class="cta">Download Resume</a> 
+                    <h2>Full Stack Web <span> Developer & Graphic Designer </span></h2> 
+                    <p>I am a full stack web developer that provides clean code and perfect design. I also make the website more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device. I also design logos, flyers, brochures, business cards and lots more for companies and individuals.</p> 
+                    <a href="images/Tola Ayomikun Mogbatoluwa's Resume2 - Mayors Graphics.png" download class="cta">Download Resume</a> 
                 </div> 
             </div> 
     </section> 
     <!-- End About Section --> 
-    <!-- Contact Section --> 
-
+    <!-- Contact Section -->
     <section class="testimonial">
         <h1>Hear from <span>My Clients </span></h1>
     <div class="row">
         <div class="testimonial-col">
             <p>Thank you very much for your service, i'm really grateful. It was just like a magic when I got a notification that my website has been published and hosted + it is responsive on all devices and now i'm making more money from it.</p>
-            <img src="images/randomphoto2.jpeg">
+            <img src="images/Kehinde Adebare - Mayors Graphics.jpeg">
             <h3>Kehinde Adebare</h3>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -178,7 +160,7 @@
         </div>
         <div class="testimonial-col">
             <p>It's true if you're hearing that a website is said to be the face of a brand or a business organization. Since December 2021 that I got my first app store my business has ranked to the next level. A very big thank you to Mayors Graphics. </p>
-            <img src="images/randomphoto3.jpeg">
+            <img src="images/Mustapha Solomon- Mayors Graphics.jpeg">
             <h3>Mustapha Solomon</h3>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -190,7 +172,7 @@
         </div>
         <div class="testimonial-col">
             <p>Flyers was the best thing I got from you. I love all those animations and the effects in the video. If your're seeing this comment, don't hesitate to send a message to Mayors Graphics and get your work done. Do not hesitate to message him.</p>
-            <img src="images/randomphoto4.jpeg">
+            <img src="images/Akinwale John- Mayors Graphics.jpeg">
             <h3>Akinsanya Rebecca</h3>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -240,19 +222,31 @@
                     </div> 
                 </div> 
             </div> 
-        </div> 
+            <div class="contact-col" id="projects">
+                <h4>Enter Your <span>Details here</span></h4>
+                <form action="form-hndler.php" method="post">
+                    <input type="text" name="name" placeholder="Enter your name" required>
+                    <input type="email" name="email" placeholder="youremail@gmail.com" required>
+                    <input type="text" placeholder="Graphic Design/Website Design/Animation" name="subject" required>
+                    <textarea rows="8" name="Message" placeholder="Type your Message here..." required></textarea>
+                    <br>
+                    <button type="submit" class="cta">Send Message</button>
+                </form>
+            </div>
+        </div>
     </section> 
     <!-- End Contact Section --> 
     <!-- Footer --> 
     <section id="footer"> 
         <div class="footer container"> 
             <div class="brand"> 
-                <h1><span>Ay</span>omikun <span>T</span>ola</h1> 
+                <img class="logo" src="images/Mayors Graphics © - Personal Logo.png">
+                <h1><span>Mayors </span>Graphics</h1> 
             </div> 
             <h2>Your Complete Web Solution</h2> 
             <div class="social-icon"> 
                 <div class="social-item"> 
-                    <a href="https://www.facebook.com/atm.og.3"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a> 
+                    <a href="https://www.facebook.com/@mayorsgraphics"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a> 
                 </div> 
                 <div class="social-item"> 
                     <a href="https://www.instagram.com/mayorz_graphics"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a> 
@@ -264,11 +258,26 @@
                     <a href="https://www.tolaayomikun9@gmail.com"><img src="https://i.pinimg.com/236x/eb/d2/cf/ebd2cfe087880001e337fdcdd137ed1a.jpg" /></a> 
                 </div> 
             </div> 
-            <p>Copyright © 2022, Mayors Graphics. All rights reserved <br> Tested and Trusted ✔</p> 
+            <p>Copyright © 2022, Mayors Graphics. <br> All rights reserved <br> Tested and Trusted ✔</p> 
         </div> 
     </section> 
     <!-- End Footer --> 
+    
     <script src="apps.js">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12">
+    </script>
+
+<!--JavaScript for Typing Text-->
+    <script>
+
+        var typed = new Typed(".auto-type", {
+            strings:["Full Stack Web Developer","Graphic Designer", "Video Animator", "Typist"],
+            typeSpeed: 150,
+            backSpeed: 150,
+            loop: true
+        })
     </script>
 </body> 
 </html>
