--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
     <section id="footer"> 
         <div class="footer container"> 
             <div class="brand"> 
-                <img class="logo" src="images/Mayors Graphics © - Personal Logo.png">
-                <h1><span>Mayors </span>Graphics</h1> 
+              <a href="index.html">   <img class="logo" src="images/Mayors Graphics © - Personal Logo.png"></a>
+               <a href="index.html"> <h1><span>Mayors </span>Graphics</h1>  </a>
             </div> 
             <h2>Your Complete Web Solution</h2> 
             <div class="social-icon"> 
