--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="Tola Ayomikun Mogbatoluwa, Portfolio Website Design, Mayors Graphics, Graphic Designer in Nigeria, Best of all in Nigeria">
     <meta name="description" content="Tola Ayomikun is a Full Stack Web Developer & Graphic Designer. He has 4 years experience in this field...">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+    <script src="https://kit.fontawesome.com/19369736e3.js" crossorigin="anonymous"></script>
     <link rel="icon" href="images/Mayors Graphics © - Personal Logo.png">
     <title>Tola Ayomikun | Portfolio Website</title>
 </head> 
@@ -92,15 +94,6 @@
         <h1>MY RECENT <span>PROJECTS</span></h1>
         <div class="row">
             <div class="col-3">
-                <img src="images/Flyer- Mayors Graphics.png">
-            </div>
-            <div class="col-3">
-                <img src="images/Flyer- Mayors Graphics2.png">
-            </div>
-            <div class="col-3">
-                <img src="images/Flyer-Mayors Graphics3.png">
-            </div>
-            <div class="col-3">
                 <img src="images/Happy Birthday Flyer - Mayors Graphics.png">
             </div>
             <div class="col-3">
@@ -113,13 +106,7 @@
                 <img src="images/Social Media Flyer - Mayors Graphics.png">
             </div>
             <div class="col-3">
-                <img src="images/Web design flyer- Mayors Gaphics.png">
-            </div>
-            <div class="col-3">
                 <img src="images/Social Media Post Flyer - Mayors Graphics.png">
-            </div>
-            <div class="col-3">
-                <img src="images/Bag Mockup - Mayors Graphics.jpg">
             </div>
         </div>
     </div>
@@ -173,7 +160,7 @@
         <div class="testimonial-col">
             <p>Flyers was the best thing I got from you. I love all those animations and the effects in the video. If your're seeing this comment, don't hesitate to send a message to Mayors Graphics and get your work done. Do not hesitate to message him.</p>
             <img src="images/Akinwale John- Mayors Graphics.jpeg">
-            <h3>Akinsanya Rebecca</h3>
+            <h3>Akinsanya Sheffiu</h3>
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -273,7 +260,7 @@
     <script>
 
         var typed = new Typed(".auto-type", {
-            strings:["Full Stack Web Developer","Graphic Designer", "Video Animator", "Typist"],
+            strings:["Full Stack Web Developer","Graphic Designer", "Video Animator"],
             typeSpeed: 150,
             backSpeed: 150,
             loop: true
