--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
             <div class="service-item"> 
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" />
                 </div> 
-                <h2>Web Design</h2> 
-                <p>A responsive website is what your company needs today! Getting a website for yourself doesn't mean you're taking a risk because it will allow customers to reach out to your online store easily.</p> 
+                <h2>Web Development</h2> 
+                <p>With a website, your business is no longer confined to a physical location. Your products, services, and brand can reach customers around the world, breaking down geographical barriers and opening up new markets.</p> 
             </div> 
             <div class="service-item"> 
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" />
                 </div> 
-                <h2>Advert Videos</h2> 
-                <p>The fastest way to gain human attention is using video. A video will make your client trust you and rely on you. A promotional video tells a client more about your brand and you don't go about typing.</p> 
+                <h2>UI/UX Design</h2> 
+                <p>Whether it's a website, mobile app, or software platform, investing in UI/UX design as a service is crucial for businesses that prioritize user-centered design. By collaborating with experienced UI/UX designers, businesses can ensure that their digital products are intuitive and provide an exceptional user experience.</p> 
             </div> 
             <div class="service-item"> 
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" />
@@ -94,19 +94,19 @@
         <h1>MY RECENT <span>PROJECTS</span></h1>
         <div class="row">
             <div class="col-3">
-                <img src="images/Happy Birthday Flyer - Mayors Graphics.png">
+                <img src="images/1673014224634.jpg">
             </div>
             <div class="col-3">
-                <img src="images/Happy Sunday Flyer - Mayors Graphics.png">
+                <img src="images/1673022432820.jpg">
             </div>
             <div class="col-3">
-                <img src="images/Yetty White Cakes- Mayors Graphics.png">
+                <img src="images/Happy Birthday Template Design 2.png">
             </div>
             <div class="col-3">
-                <img src="images/Social Media Flyer - Mayors Graphics.png">
+                <img src="images/Merry Christmas.png">
             </div>
             <div class="col-3">
-                <img src="images/Social Media Post Flyer - Mayors Graphics.png">
+                <img src="images/Subscribe Android Master.png">
             </div>
         </div>
     </div>
@@ -123,8 +123,9 @@
             <div class="col-right"> 
                     <h1 class="section-title">About <span>me</span></h1> 
                     <h2>Full Stack Web <span> Developer & Graphic Designer </span></h2> 
-                    <p>I am a full stack web developer that provides clean code and perfect design. I also make the website more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device. I also design logos, flyers, brochures, business cards and lots more for companies and individuals.</p>
+                    <p>Hello, my name is Tola Ayomikun, and I am a passionate and versatile creative professional specializing in Graphic Design, Website Design and Development, UI/UX Design, and Gaming. With a strong foundation in these fields and a keen eye for aesthetics, I strive to deliver visually stunning and user-centric experiences in all my projects.</p>
                     <a href="images/Tola Ayomikun Mogbatoluwa's Resume2 - Mayors Graphics.png" download class="cta">Download Resume</a> 
+                    <a href="images/BetaFood" download class="cta">Download More Projects</a>
                 </div> 
             </div> 
     </section> 
@@ -186,7 +187,7 @@
                     <div class="contact-info"> 
                         <h1>Phone</h1> 
                         <h2>+234 808 702 4944</h2> 
-                        <h2>+234 903 575 8739</h2> 
+                        <h2>+234 911 659 1465</h2> 
                     </div> 
                 </div> 
                 <div class="contact-item"> 
@@ -196,7 +197,7 @@
                     <div class="contact-info"> 
                         <h1>Email</h1> 
                         <h2>tolaayomikun9@gmail.com</h2> 
-                        <h2>tolaayomikun0@gmail.com</h2> 
+                        <h2>mayorzgraphics@gmail.com</h2> 
                     </div> 
                 </div> 
                 <div class="contact-item"> 
@@ -209,17 +210,6 @@
                     </div> 
                 </div> 
             </div> 
-            <div class="contact-col" id="projects">
-                <h4>Enter Your <span>Details here</span></h4>
-                <form action="form-hndler.php" method="post">
-                    <input type="text" name="name" placeholder="Enter your name" required>
-                    <input type="email" name="email" placeholder="youremail@gmail.com" required>
-                    <input type="text" placeholder="Graphic Design/Website Design/Animation" name="subject" required>
-                    <textarea rows="8" name="Message" placeholder="Type your Message here..." required></textarea>
-                    <br>
-                    <button type="submit" class="cta">Send Message</button>
-                </form>
-            </div>
         </div>
     </section> 
     <!-- End Contact Section --> 
@@ -239,10 +229,10 @@
                     <a href="https://www.instagram.com/mayorz_graphics"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a> 
                 </div> 
                 <div class="social-item"> 
-                    <a href="https://www.twitter.com/@MayorsGraphics"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a> 
+                    <a href="https://www.twitter.com/@MayorsGraphics"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR49FWrib82OHoekxsqzxBdYsBmDp-j6RkxIA&usqp=CAU"/></a> 
                 </div> 
                 <div class="social-item"> 
-                    <a href="https://www.tolaayomikun9@gmail.com"><img src="https://i.pinimg.com/236x/eb/d2/cf/ebd2cfe087880001e337fdcdd137ed1a.jpg" /></a> 
+                    <a href="https://www.mayorzgraphics@gmail.com"><img src="https://i.pinimg.com/236x/eb/d2/cf/ebd2cfe087880001e337fdcdd137ed1a.jpg" /></a> 
                 </div> 
             </div> 
             <p>Copyright © 2022, Mayors Graphics. <br> All rights reserved <br> Tested and Trusted ✔</p> 
